--- a/examen-revision/src/scss/_base.scss
+++ b/examen-revision/src/scss/_base.scss
@@ -39,9 +39,13 @@ video {
   vertical-align: middle;
 }
 
-/* ====================================
-// base rules
-// ==================================== */
+img {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
 
 .row + .row {
   margin-top: 16px;
@@ -54,3 +58,7 @@ video {
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.2);
 }
+
+/* ====================================
+// base rules
+// ==================================== */
