--- a/examen-revision/src/scss/main.scss
+++ b/examen-revision/src/scss/main.scss
@@ -2,3 +2,9 @@
 @import "layout";
 @import "modules/example";
 @import "bootstrap/scss/bootstrap-grid";
+@import "modules/_selectors";
+@import "modules/_card";
+@import "modules/_nav";
+@import "modules/_social";
+@import "modules/_row";
+@import "modules/highlight";
